fixed overflow error that would mess up the footer

--- a/myuv/theme.css
+++ b/myuv/theme.css
@@ -110,12 +110,13 @@ header {
         border-color: rgb(127, 25, 25);
       }
     .movie_footer {
+      overflow: hidden;
       background-color: #ddd;
       font-size: 25px;
       text-align: center;
       float: left;
       width: 100%;
-      min-height: 30px;
+      height: 30px;
       margin-bottom: 10px;
     }
 
